🐛 fix beaufort font not showing

--- a/src/Tailwind.css
+++ b/src/Tailwind.css
@@ -4,8 +4,8 @@
 
 @font-face {
     font-family: 'Spiegel';
-    src: url('fonts/Spiegel-Regular.otf');
+    src: url('fonts/Spiegel-Regular.otf') format('opentype');
 
     font-family: 'Beaufort for LOL';
-    src: url('fonts/BeaufortforLOL-Regular.otf');
+    src: url('fonts/BeaufortforLOL-Regular.otf') format('opentype');
 }
